--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<!doctype HTML>
-<HTML>
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="script.js"></script>
+</head>
+<body>
+    
+</body>
+</html>
 
-<script src="script.js"></script>
-</HTML>
